Closed Bug 841576 Opened 12 years ago Closed 12 years ago

Bluetooth: ASSERTION: nsTHashtable::Init() should not be called twice.: 'Error', file ../../dist/include/nsTHashtable.h, line 393

Categories

(Core :: DOM: Device Interfaces, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla22
blocking-b2g tef+
Tracking Status
firefox20 --- verified
firefox21 --- wontfix
firefox22 --- fixed
b2g18 --- fixed
b2g18-v1.0.0 --- wontfix
b2g18-v1.0.1 --- fixed

People

(Reporter: gwagner, Assigned: echou)

References

Details

Attachments

(1 file)

Breakpoint 1, nsTHashtable<nsBaseHashtableET<nsStringHashKey, DBusMessage*> >::Init (this=0x4463b130, initSize=16) at ../../dist/include/nsTHashtable.h:393 393 NS_ERROR("nsTHashtable::Init() should not be called twice."); (gdb) bt #0 nsTHashtable<nsBaseHashtableET<nsStringHashKey, DBusMessage*> >::Init (this=0x4463b130, initSize=16) at ../../dist/include/nsTHashtable.h:393 #1 0x41882f8c in nsTHashtable<nsBaseHashtableET<nsStringHashKey, DBusMessage*> >::Init (this=0x4463b130, initSize=16) at ../../dist/include/nsTHashtable.h:98 #2 0x41882b98 in nsBaseHashtable<nsStringHashKey, DBusMessage*, DBusMessage*>::Init (this=0x4463b130, initSize=16) at ../../dist/include/nsBaseHashtable.h:69 #3 0x4187ef92 in mozilla::dom::bluetooth::BluetoothDBusService::StartInternal (this=0x457bafc0) at /Volumes/2mac/gaia/3src/dom/bluetooth/linux/BluetoothDBusService.cpp:1622 #4 0x41883ec6 in mozilla::dom::bluetooth::BluetoothGonkService::StartInternal (this=0x457bafc0) at /Volumes/2mac/gaia/3src/dom/bluetooth/gonk/BluetoothGonkService.cpp:133 #5 0x4185a54c in mozilla::dom::bluetooth::BluetoothService::ToggleBtTask::Run (this=0x474ba560) at /Volumes/2mac/gaia/3src/dom/bluetooth/BluetoothService.cpp:191 #6 0x42627c38 in nsThread::ProcessNextEvent (this=0x495084a0, mayWait=true, result=0x49987e87) at /Volumes/2mac/gaia/3src/xpcom/threads/nsThread.cpp:627 #7 0x425c44da in NS_ProcessNextEvent_P (thread=0x495084a0, mayWait=true) at /Volumes/2mac/gaia/3src/debotorobuild/xpcom/build/nsThreadUtils.cpp:238 #8 0x42626cde in nsThread::ThreadFunc (arg=0x495084a0) at /Volumes/2mac/gaia/3src/xpcom/threads/nsThread.cpp:265 #9 0x403a954a in _pt_root (arg=0x495087b0) at /Volumes/2mac/gaia/3src/nsprpub/pr/src/pthreads/ptthread.c:156 #10 0x4012be18 in __thread_entry (func=0x403a9479 <_pt_root>, arg=0x495087b0, tls=<value optimized out>) at bionic/libc/bionic/pthread.c:217 #11 0x4012b96c in pthread_create (thread_out=<value optimized out>, attr=0xbedb3de8, start_routine=0x403a9479 <_pt_root>, arg=0x495087b0) at bionic/libc/bionic/pthread.c:357 #12 0x00000000 in ?? ()
Looks like this is bug 730992 that added them.
* Call IsInitialized() before Init() to prevent from calling Init() twice.
Assignee: nobody → echou
Attachment #721050 - Flags: review?(bent.mozilla)
Blocks: 846586
Attachment #721050 - Flags: review?(kyle)
Attachment #721050 - Flags: review?(kyle) → review+
Attachment #721050 - Flags: review?(bent.mozilla)
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla22
blocking-b2g: --- → tef?
(trivial patch, lgtm)
blocking-b2g: tef? → tef+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: