Bug 841576 - Check if nsTHashtable has been initialized before calling Init()